[gd_scene load_steps=6 format=3 uid="uid://main_moonfall"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2"]
[ext_resource type="Script" path="res://scripts/ConstellationPuzzle.gd" id="3"]
[ext_resource type="Script" path="res://scripts/OrbDecoder.gd" id="4"]
[ext_resource type="Script" path="res://scripts/GravityShifter.gd" id="5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(40, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 20.0

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(100, 400)
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(0.5, 0.8, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_1")

[node name="Glow" type="PointLight2D" parent="Player"]
color = Color(0.5, 0.8, 1, 1)
energy = 1.0
texture_scale = 2.0

[node name="InteractionArea" type="Area2D" parent="Player"]

[node name="InteractionShape" type="CollisionShape2D" parent="Player/InteractionArea"]
shape = SubResource("CircleShape2D_1")

[node name="InteractionPrompt" type="Label" parent="Player"]
visible = false
offset_left = -30.0
offset_top = -50.0
offset_right = 30.0
offset_bottom = -30.0
text = "Press E"
horizontal_alignment = 1

[node name="ConstellationPuzzle" type="Node2D" parent="."]
position = Vector2(300, 200)
script = ExtResource("3")

[node name="ConstellationArea" type="Area2D" parent="ConstellationPuzzle"]

[node name="ConstellationShape" type="CollisionShape2D" parent="ConstellationPuzzle/ConstellationArea"]
shape = SubResource("CircleShape2D_1")

[node name="Stars" type="Node2D" parent="ConstellationPuzzle"]

[node name="Star1" type="Sprite2D" parent="ConstellationPuzzle/Stars"]
position = Vector2(-50, -30)
modulate = Color(1, 1, 0, 1)

[node name="Star2" type="Sprite2D" parent="ConstellationPuzzle/Stars"]
position = Vector2(50, -30)
modulate = Color(1, 1, 0, 1)

[node name="Star3" type="Sprite2D" parent="ConstellationPuzzle/Stars"]
position = Vector2(0, 30)
modulate = Color(1, 1, 0, 1)

[node name="Star4" type="Sprite2D" parent="ConstellationPuzzle/Stars"]
position = Vector2(-30, 50)
modulate = Color(1, 1, 0, 1)

[node name="Star5" type="Sprite2D" parent="ConstellationPuzzle/Stars"]
position = Vector2(30, 50)
modulate = Color(1, 1, 0, 1)

[node name="Lines" type="Node2D" parent="ConstellationPuzzle"]

[node name="Glow" type="PointLight2D" parent="ConstellationPuzzle"]
color = Color(1, 1, 0, 1)
energy = 0.5
texture_scale = 3.0

[node name="InstructionLabel" type="Label" parent="ConstellationPuzzle"]
visible = false
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -60.0
text = "Connect stars in the correct pattern"
horizontal_alignment = 1

[node name="SuccessLabel" type="Label" parent="ConstellationPuzzle"]
visible = false
offset_left = -80.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 100.0
text = "Archive Restored!"
horizontal_alignment = 1

[node name="OrbDecoder" type="Node2D" parent="."]
position = Vector2(600, 400)
script = ExtResource("4")

[node name="DecoderArea" type="Area2D" parent="OrbDecoder"]

[node name="DecoderShape" type="CollisionShape2D" parent="OrbDecoder/DecoderArea"]
shape = SubResource("CircleShape2D_1")

[node name="Orbs" type="Node2D" parent="OrbDecoder"]

[node name="Orb1" type="Sprite2D" parent="OrbDecoder/Orbs"]
position = Vector2(-60, 0)
modulate = Color(1, 0, 0, 1)

[node name="Orb2" type="Sprite2D" parent="OrbDecoder/Orbs"]
position = Vector2(-30, 0)
modulate = Color(0, 0, 1, 1)

[node name="Orb3" type="Sprite2D" parent="OrbDecoder/Orbs"]
position = Vector2(0, 0)
modulate = Color(0, 1, 0, 1)

[node name="Orb4" type="Sprite2D" parent="OrbDecoder/Orbs"]
position = Vector2(30, 0)
modulate = Color(1, 1, 0, 1)

[node name="Orb5" type="Sprite2D" parent="OrbDecoder/Orbs"]
position = Vector2(60, 0)
modulate = Color(1, 0, 1, 1)

[node name="SequenceDisplay" type="Label" parent="OrbDecoder"]
offset_left = -50.0
offset_top = 40.0
offset_right = 50.0
offset_bottom = 60.0
text = ""
horizontal_alignment = 1

[node name="Glow" type="PointLight2D" parent="OrbDecoder"]
color = Color(1, 0, 1, 1)
energy = 0.5
texture_scale = 2.5

[node name="InstructionLabel" type="Label" parent="OrbDecoder"]
visible = false
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -40.0
text = "Click orbs in the correct sequence"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="OrbDecoder"]
offset_left = -30.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = -20.0
text = ""
horizontal_alignment = 1

[node name="SuccessLabel" type="Label" parent="OrbDecoder"]
visible = false
offset_left = -80.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 100.0
text = "Archive Restored!"
horizontal_alignment = 1

[node name="GravityShifter" type="Node2D" parent="."]
position = Vector2(450, 300)
script = ExtResource("5")

[node name="ShifterArea" type="Area2D" parent="GravityShifter"]

[node name="ShifterShape" type="CollisionShape2D" parent="GravityShifter/ShifterArea"]
shape = SubResource("CircleShape2D_1")

[node name="Arrow" type="Sprite2D" parent="GravityShifter"]

[node name="Glow" type="PointLight2D" parent="GravityShifter"]
color = Color(0.5, 0, 1, 1)
energy = 0.8
texture_scale = 2.0

[node name="InstructionLabel" type="Label" parent="GravityShifter"]
visible = false
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = -20.0
text = "Press E to shift gravity"
horizontal_alignment = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -10.0
text = "Score: 0"

[node name="ArchivesLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 220.0
offset_top = -40.0
offset_right = 420.0
offset_bottom = -10.0
text = "Archives: 0/3"

[node name="TimeLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -10.0
text = "Time: 5:00"
horizontal_alignment = 1